--- a/k8s_apptemplate.yaml
+++ b/k8s_apptemplate.yaml
@@ -9,6 +9,7 @@ spec:
   template:
     metadata:
       labels:
+        app: cloudspikeapp
         templatename: cloudspikeapptemplate
     spec:
       containers:
